UT06 Almacenamiento - Contextos React

--- a/codigo-react/src/App.css
+++ b/codigo-react/src/App.css
@@ -51,3 +51,10 @@
   background-color: rgb(197, 197, 197);
   min-width: 350px;
 }
+
+.conBorde {
+  padding: 50px;
+  margin-left: 10px;
+  border: 2px white solid;
+  min-width: 350px;
+}
